# BenchATX

./: .gitignore  .gitmodules  ATX PSU Bench Supply.csv  ATX PSU Bench Supply.kicad_prl  ATX PSU Bench Supply.kicad_pro  ATX PSU Bench Supply.kicad_sch  ATX PSU Bench Supply.xlsx  ATX PSU Bench Supply.xml  Power Monitor.kicad_sch  README.md  ibom.config.ini
.github/actions/pico-build-action/: Dockerfile  entrypoint.sh
.github/workflows/: firmware_build.yml
bom/: ibom.html
case/: BenchATX Case Bottom.3mf  BenchATX Case Button.3mf  BenchATX Case Top 1.3 OLED.3mf
firmware/: CMakeLists.txt  blink.c  blink.uf2  buttons.h  display.c  display.h  main.c  power_sensor.c  power_sensor.h  settings.c  settings.h  status_led.c
firmware/custom_font/: Chan_Icons.psd  On_Icon.psd  Pix32_Font.psd  SpleenTT.png.h  font_to_header.py  fonts.cmake
graphics/: BenchATX Logo.ai  BenchATX Logo.dxf  Hexagon Pattern.ai  Ikea Man Thinking.ai
libraries/: 0039301240.stp  0039301241.stp  0469911008.stp  1724480008.stp
libraries/LIB_24.243.1/: 24.243.1.dcm  24.243.1.kicad_mod  24.243.1.lib  24.243.1.mod  24.243.2.kicad_mod  24_243_1.kicad_sym
libraries/LIB_973582101/: 973582101.dcm  973582101.kicad_mod  973582101.kicad_sym  973582101.lib  973582101.mod  973582101.stp
libraries/Project Custom.pretty/: Hybrid 4mm Test Socket.kicad_mod
plots/: ATX PSU Bench Supply-B_Cu.gbl  ATX PSU Bench Supply-B_Mask.gbs  ATX PSU Bench Supply-B_Paste.gbp  ATX PSU Bench Supply-B_Silkscreen.gbo  ATX PSU Bench Supply-Edge_Cuts.gm1  ATX PSU Bench Supply-F_Cu.gtl  ATX PSU Bench Supply-F_Mask.gts  ATX PSU Bench Supply-F_Paste.gtp  ATX PSU Bench Supply-F_Silkscreen.gto  ATX PSU Bench Supply-In1_Cu.g2  ATX PSU Bench Supply-In2_Cu.g3  ATX PSU Bench Supply-NPTH-drl_map.gbr  ATX PSU Bench Supply-NPTH.drl  ATX PSU Bench Supply-PTH-drl_map.gbr  ATX PSU Bench Supply-PTH.drl  ATX PSU Bench Supply-job.gbrjob
